test_suite/tests/ui/conflict/flatten-newtype-struct.stderr
error: #[serde(flatten)] cannot be used on newtype structs
 --> $DIR/flatten-newtype-struct.rs:5:12
  |
5 | struct Foo(#[serde(flatten)] HashMap<String, String>);
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

